<resources>
    <string name="app_name">Arcade</string>
    <string name="start">START</string>
    <string name="zero">0</string>
    <string name="sixty">60</string>
    <string name="duck_hunt">Duck Hunt</string>
    <string name="total_points">Total Points</string>
    <string name="game_over">Game Over</string>
    <string name="exit">Exit</string>
    <string name="ranking">Ranking</string>
    <string name="sign_in_google">SIGN IN WITH GOOGLE</string>
    <string name="sign_out">Sign Out</string>
    <string name="tictactoe">TicTacToe</string>
    <string name="play">Play</string>
    <string name="loading">Loading</string>
    <string name="searching_match">Search Match</string>
    <string name="creating_match">Creating A Match</string>
    <string name="waiting_player">Waiting Player</string>
    <string name="start_game">Start Game</string>
    <string name="found_match">Found Match</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
</resources>
