<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_sign_in"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarDarkTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_email_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_sign_in"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et_email_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/et_password_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/et_user_name"
        app:layout_constraintStart_toStartOf="@+id/et_user_name"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name" />

    <EditText
        android:id="@+id/et_password_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/et_confirm_password"
        app:layout_constraintEnd_toEndOf="@+id/et_email_sign_in"
        app:layout_constraintStart_toStartOf="@+id/et_email_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/et_email_sign_in" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/et_password_sign_in"
        app:layout_constraintStart_toStartOf="@+id/et_password_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/et_password_sign_in" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@+id/btn_google_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/et_confirm_password"
        app:layout_constraintStart_toStartOf="@+id/et_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/et_confirm_password" />

    <Button
        android:id="@+id/btn_google_sign_in"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/sign_in_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>