<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/duck_hunt_bg"
    tools:context=".ui.DuckHuntActivity">

    <ImageView
        android:id="@+id/iv_duck_hunt_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/duck_hunt"
        android:scaleType="fitCenter"
        android:src="@drawable/duck_hunt_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_start_duck_hunt"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:backgroundTint="#005199FB"
        android:fontFamily="@font/mario_kart"
        android:text="@string/start"
        android:textColor="#FFD842"
        android:textColorHighlight="#5199FB"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_duck_hunt_logo"
        app:layout_constraintStart_toStartOf="@+id/iv_duck_hunt_logo"
        app:layout_constraintTop_toBottomOf="@+id/iv_duck_hunt_logo" />

    <ImageView
        android:id="@+id/iv_duck_points"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/duck_hunt"
        android:scaleType="fitCenter"
        android:src="@drawable/duck_clicked"
        app:layout_constraintBottom_toBottomOf="@+id/tv_duck_points"
        app:layout_constraintEnd_toStartOf="@+id/tv_duck_points"
        app:layout_constraintTop_toTopOf="@+id/tv_duck_points" />

    <TextView
        android:id="@+id/tv_duck_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/mario_kart"
        android:text="@string/zero"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_duck_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_duck_time" />

    <TextView
        android:id="@+id/tv_duck_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/mario_kart"
        android:text="@string/sixty"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_duck_timer"
        app:layout_constraintStart_toEndOf="@+id/iv_duck_timer"
        app:layout_constraintTop_toTopOf="@+id/iv_duck_timer" />

    <ImageView
        android:id="@+id/iv_duck_timer"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/duck_hunt"
        android:src="@drawable/ic_timer_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_duck_flying"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:contentDescription="@string/duck_hunt"
        android:src="@drawable/duck"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="317dp" />
</androidx.constraintlayout.widget.ConstraintLayout>